--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+dnspython==1.16.0
 Flask==1.1.1
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 jsonpickle==1.3
 MarkupSafe==1.1.1
+mysql-connector-python==8.0.19
+protobuf==3.6.1
 PyJWT==1.7.1
 pytz==2019.3
 requests==2.23.0
