--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ chardet==3.0.4
 Click==7.0
 dnspython==1.16.0
 Flask==1.1.1
+Flask-Cors==3.0.8
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 jsonpickle==1.3
 MarkupSafe==1.1.1
+mysql-connector==2.2.9
 mysql-connector-python==8.0.19
 protobuf==3.6.1
 PyJWT==1.7.1
