--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 #ignore si-project-back folder (name of Julio's virtual environment)
 si-project-back/
+
+Clasificacion_clasi.ipynb
+cost-of-living.csv
